[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Parent MCP Server for managing multiple child MCP servers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.0",
    "mcp>=1.22.0",
]

[project.scripts]
mcp-gateway = "mcp-gateway:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "mcp-gateway-server.py",
    "children_config.example.json",
    "children_abstract.example.json",
    "example.mcp.json",
]

[tool.uv]
dev-dependencies = []
